# apk-info

./: .gitignore  Cargo.toml  README.md  flake.nix  mkdocs.yml  pyproject.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  python.yml  release-python.yml  release.yml
axml/: Cargo.toml
axml/src/: axml.rs  errors.rs  lib.rs  system_types.rs
axml/src/assets/: public.json
axml/src/structs/: mod.rs  res_chunk_header.rs  res_string_pool.rs  xml_elements.rs  xml_resource_map.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: arsc.rs  axml.rs  dex.rs  extract.rs  mod.rs  path_helpers.rs  show.rs
core/: Cargo.toml
core/src/: apk.rs  errors.rs  lib.rs  models.rs
crates/axml/: Cargo.toml  build.rs
crates/axml/src/: arsc.rs  axml.rs  errors.rs  lib.rs  system_types.rs
crates/axml/src/assets/: attrs.json  attrs_manifest.json
crates/axml/src/converters/: attrs-converter.rs
crates/axml/src/structs/: attrs_manifest.rs  common.rs  mod.rs  res_chunk_header.rs  res_string_pool.rs  res_table_config.rs  resource_table.rs  system_types.rs  xml_elements.rs
crates/dex/: Cargo.toml  README.md
crates/dex/src/: dex.rs  errors.rs  lib.rs  opcode.rs
crates/xml/: Cargo.toml
crates/xml/src/: lib.rs
crates/zip/: Cargo.toml
crates/zip/src/: compression.rs  entry.rs  errors.rs  lib.rs  signature.rs
crates/zip/src/structs/: central_directory.rs  eocd.rs  local_file_header.rs  mod.rs
docs/: index.md  python.md
examples/: bench.py  entrypoint.py  signatures.py
fuzz/: Cargo.toml  axml.dict  zip.dict
fuzz/fuzz_targets/: arsc-fuzzer.rs  axml-fuzzer.rs  dex-fuzzer.rs  zip-fuzzer.rs
python/: Cargo.toml  README.md  apk_info.pyi  pyproject.toml
python/apk_info/: __init__.py  _apk.pyi
python/src/: lib.rs
src/: lib.rs
zip/: Cargo.toml
zip/src/: entry.rs  errors.rs  lib.rs
zip/src/structs/: central_directory.rs  eocd.rs  local_file_header.rs  mod.rs
