[workspace.package]
version = "1.0.11"
authors = ["Alexey <delvinru@gmail.com>"]
categories = ["Parsing tools"]
description = "APK full-featured parser"
edition = "2024"
homepage = "https://github.com/delvinru/apk-info"
keywords = ["android", "apk", "arsc", "axml", "malware"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/delvinru/apk-info"

[workspace]
resolver = "3"
members = [
    "cli",
    "core",
    "crates/axml",
    "crates/xml",
    "crates/zip",
    "fuzz",
    "python",
]

[workspace.dependencies]
# internal
apk-info = { path = "core", version = "1.0.11" }
apk-info-axml = { path = "crates/axml", version = "1.0.11" }
apk-info-xml = { path = "crates/xml", version = "1.0.11" }
apk-info-zip = { path = "crates/zip", version = "1.0.11" }

# external
anyhow = "1.0.102"
ahash = "0.8.12"
bat = { version = "0.26.1", default-features = false, features = [
    "build-assets",
    "regex-fancy",
] }
bitflags = "2.11.0"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
cms = "0.2.3"
colored = "3.1.1"
env_logger = { version = "0.11.9", features = ["auto-color"] }
flate2 = "1.1.9"
log = "0.4.29"
md-5 = "0.10.6"
memchr = "2.8.0"
once_cell = "1.21.3"
openssl = { version = "0.10.75", features = ["vendored"] }
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"
pyo3 = "0.28.2"
quick-xml = "0.39.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
smallvec = "1.15.1"
thiserror = "2"
walkdir = "2.5.0"
winnow = { version = "0.7.14", features = ["simd"] }
x509-cert = "0.2.5"

[profile.release]
codegen-units = 1
panic = "abort"

# longer build, but smaller binary and better optimized
[profile.release-lto]
inherits = "release"
lto = true

[profile.profiling]
inherits = "release"
debug = true
