[project]
name = "apk-info"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
profile = "release"
python-source = "python"
module-name = "apk_info._apk"
features = ["pyo3/extension-module"]
strip = true

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"
