[package]
name = "axml"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags = { workspace = true }
once_cell = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
winnow = { workspace = true }
minidom = { workspace = true }

[[bin]]
name = "xml-converter"
path = "src/bin/xml-converter.rs"
