[package]
name = "apk-info-cli"
description = "A command-line tool to inspect and extract APK files "
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
apk-info-axml.workspace = true
apk-info-zip.workspace = true
apk-info.workspace = true
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
log.workspace = true
walkdir.workspace = true

[[bin]]
name = "apk-info"
path = "src/main.rs"
doc = false
