[package]
name = "apk-info-fuzz"
publish = false
edition.workspace = true
version.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
apk-info-axml.workspace = true
apk-info-zip.workspace = true
libfuzzer-sys = "0.4"

[[bin]]
name = "axml-fuzzer"
path = "fuzz_targets/axml-fuzzer.rs"
test = false
doc = false

[[bin]]
name = "arsc-fuzzer"
path = "fuzz_targets/arsc-fuzzer.rs"
test = false
doc = false

[[bin]]
name = "zip-fuzzer"
path = "fuzz_targets/zip-fuzzer.rs"
test = false
doc = false
