[package]
name = "apk-info-fuzz"
description = "fuzz internal structures"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
apk-info-axml.workspace = true
apk-info-dex.workspace = true
apk-info-zip.workspace = true
libfuzzer-sys = "0.4"

[[bin]]
name = "axml-fuzzer"
path = "fuzz_targets/axml-fuzzer.rs"
test = false
doc = false

[[bin]]
name = "arsc-fuzzer"
path = "fuzz_targets/arsc-fuzzer.rs"
test = false
doc = false

[[bin]]
name = "dex-fuzzer"
path = "fuzz_targets/dex-fuzzer.rs"
test = false
doc = false

[[bin]]
name = "zip-fuzzer"
path = "fuzz_targets/zip-fuzzer.rs"
test = false
doc = false
