[package]
name = "apk-info-axml"
description = "Library for working with AXML and ARSC in APK files"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
minidom.workspace = true
once_cell.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
winnow.workspace = true

[[bin]]
name = "xml-converter"
path = "src/bin/xml-converter.rs"
