[package]
name = "apk-info-axml"
description = "Library for working with AXML and ARSC in APK files"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
once_cell.workspace = true
phf = { workspace = true, features = ["macros"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
winnow.workspace = true

[build-dependencies]
phf_codegen.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
build-converter = ["serde", "serde_json"]

[[bin]]
name = "xml-converter"
path = "src/bin/xml-converter.rs"
required-features = ["build-converter"]
