[package]
name = "apk-info-zip"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
const-hex.workspace = true
flate2.workspace = true
log.workspace = true
memchr.workspace = true
openssl.workspace = true
thiserror.workspace = true
winnow.workspace = true
